Fix Avatar alignment bug

--- a/src/css/components/Avatar.css
+++ b/src/css/components/Avatar.css
@@ -6,7 +6,7 @@
     box-shadow: inset 0 0 0 1px rgba(0,0,0,.05);
     border-radius: 50%;
     color: var(--white);
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     font-weight: 600;
     font-size: 14px;
